# mylang

./: .gitignore  .gramar.txt.swp  CMakeLists.txt  LICENSE  README.md  build.py  gramar.txt  mylang.spec.txt  quick-docs.txt  spec.txt
experiments/: .hello_world.str.swp  hello_world.str  square_c.str
src/: .Ast.h.swp  .Parser.c.swp  .ParserFile.c.swp  .ParserFile.h.swp  .Token.h.swp  .TokenMacro.h.swo  .TokenMacro.h.swp  .Tokenizer.c.swp  .Tokenizer.h.swp  .main.c.swp  Ast.c  Ast.h  AstPrint.c  AstPrint.h  AstTypes.h  CMakeLists.txt  CompileUnit.c  CompileUnit.h  Keywords.c  Keywords.h  Parser.c  Parser.h  ParserCtx.c  ParserCtx.h  ParserFile.c  ParserFile.h  Token.c  Token.h  TokenMacro.h  TokenStream.c  TokenStream.h  Tokenizer.c  Tokenizer.h  arena.c  arena.h  ast.h  file.c  file.h  keywords.c  keywords.h  (+12 more)
src/args/: CMakeLists.txt  args.c  args.h
src/ast/: Ast.c  Ast.h  AstPrint.c  AstPrint.h  AstTypes.h  CMakeLists.txt
src/backends/: CMakeLists.txt  llvm.c  llvm.h
src/ir/: CMakeLists.txt  IR.h  IrDump.c  IrDump.h  IrOpsMacro.h
src/parser/: CMakeLists.txt  Parser.c  Parser.h  ParserCtx.c  ParserCtx.h
src/tokenizer/: CMakeLists.txt  TokenMacro.h  TokenStream.h  Tokenizer.c
tests/: .test1.txt.swp  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
utils/: keywords.gperf
